# nikolasn_phys495-spring2021

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.mk  fmm_build.cmake
spharm/: CMakeLists.txt  DESIGNDOC.md  Makefile  README.md  spharm.cmake.in
spharm/src/: CMakeLists.txt  Makefile  dyml_full.f90  local_expansion.f90  mml.f90  pmlcos.f90
src/: CMakeLists.txt  Makefile  cmake_install.cmake  fmm.cmake.in
src/direct/: CMakeLists.txt  DESIGNDOC.md  Makefile  force_grav_submat.f90  part_init_default.f90  sim_params.f90
src/fmm/: CMakeLists.txt  DESIGNDOC.md  Makefile  aml.f90  fmm.f90  tll.f90  tlm.f90  tmm.f90
src/logger/: Makefile  README.md  log_test.f90  sim_log.f90
src/multipole/: README.md  dpmlcos.f90  dpmlcos_full.f90  dyml.f90  dyml_full.f90  multipole.f90  pmlcos.f90  pmlcos_full.f90  quadrupole.f90  yml.f90  yml_full.f90
src/naive/: DESIGNDOC.md  Makefile  README.md  SIM_PARAMS.f90  force_grav_submat.f90  parallel.f90  part_init_default.f90  sim_params.f90
src/sph/: Makefile  sph_density.f90  sph_du_dt.f90  sph_dv_dt.f90  sph_eos.f90  sph_kernel.f90  sph_rho.f90  test_sph.f90
util/: ft2py.py
